# KiyEngine

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  V4_READY.md  V5_MIGRATION.md  acid_test.pgn  benchmark_and_plot.py  docker-compose.yml  kiyengine.gguf  kiyengine.nnue  kiyengine_v4.safetensors  omega_match.pgn  perf_test.sh  quick_match.sh  run_engine.sh  run_match.sh  run_tournament.sh  test_engine.sh  tournament.pgn  train_modal.py
.github/workflows/: codeql.yml  codeqlanalyze.yml  dependabot.yml  devskim.yml  pages.yml  release.yml  rust.yml
.windsurf/workflows/: build-website.md
archive/v1_legacy/: KiyEngine_v1.0  README.md  match.py  rating_match.py  sprt.py
archive/v1_legacy/kiy_engine_v3/: Cargo.toml
archive/v1_legacy/kiy_engine_v3/src/: lib.rs  mamba.rs  search.rs
archive/v1_legacy/src/: evaluate.rs  magic.rs  main.rs  search.rs  tt.rs
archive/v1_legacy/training/: dataset.py  training.ipynb
kiy_engine_v3/: README.md
kiy_engine_v3/src/: engine.rs  main.rs  uci.rs
medgemma_triage/: .env  app.py  prompts.py  requirements.txt  tools.py  utils.py
results/snapshots/: model.safetensors
scripts/: convert_to_gguf.py  patch_weights.py  selfplay_match.py
src/: board.rs  constants.rs  defs.rs  engine.rs  lib.rs  main.rs  mamba.rs  model.rs  moe.rs  movegen.rs  mv.rs  nnue_v2.rs  safetensor_loader.rs  search.rs  tt.rs  tutor.rs  uci.rs
src/book/: mod.rs  polyglot_keys.rs
src/engine/: bitlinear.rs  gguf.rs  heads.rs  mod.rs  model.rs  tests.rs  transformer.rs
src/eval/: batching.rs  evaluation_tests.rs  hybrid.rs  mod.rs  pst.rs
src/nnue/: accumulator.rs  features.rs  mod.rs
src/search/: eval.rs  lazy_smp.rs  mcts.rs  mcts_arena.rs  mcts_batch.rs  mcts_memory.rs  mod.rs  syzygy.rs  time.rs  tt.rs
src/simd/: mod.rs
src/uci/: mcts_handler.rs  mod.rs
tests/: tt_tests.rs
train_nnue/: continuous_rl.py  train.py
training/: .gitignore  Cargo.toml  README.md  config.yaml  model.py  requirements.txt  train.py
training/scripts/: convert_to_kynn.py  download_and_convert.sh  generate_and_train.sh  generate_sf_data.py  prepare_data.py  setup_lightning.sh  train.sh  train_gpu.sh
training/src/: main.rs
website/: index.html
