[package]
name = "kiy_engine_v4_omega"
version = "4.4.2"
edition = "2021"

[dependencies]
chess = "3.2.0"
candle-core = "0.9.2"
candle-nn = "0.9.2"
anyhow = "1.0.95"
safetensors = "0.7.0"
memmap2 = "0.9.5"
dashmap = "6.1.0"
parking_lot = "0.12.3"

[features]
noise = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
