[package]
name = "kiy_engine_v5_alpha"
version = "6.0.0"
edition = "2021"

[dependencies]
chess = "3.2.0"
candle-core = "0.9.2"
candle-nn = "0.9.2"
anyhow = "1.0.95"
safetensors = "0.7.0"
memmap2 = "0.9.5"
dashmap = "6.1.0"
parking_lot = "0.12.3"
half = "2.3.1"
serde_json = "1.0"
bytemuck = "1.14"
rayon = "1.8"

[features]
noise = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
