[package]
name = "kiyengine-nnue-trainer"
version = "0.2.0"
edition = "2021"
description = "NNUE trainer for KiyEngine using Bullet framework (CPU or GPU)"

[dependencies]
bullet_lib = { git = "https://github.com/jw1912/bullet", default-features = false, features = ["cpu"] }

[features]
default = []
cuda = ["bullet_lib/cuda"]

[[bin]]
name = "train"
path = "src/main.rs"
