[package]
name = "kiyengine-nnue-trainer"
version = "0.2.0"
edition = "2021"
description = "NNUE trainer for KiyEngine using Bullet framework (CPU or GPU)"

[dependencies]
bullet_lib = { git = "https://github.com/jw1912/bullet", rev = "3ce1393f", default-features = false }
acyclib = { git = "https://github.com/jw1912/bullet", rev = "3ce1393f" }

[features]
default = ["cpu"]
cpu = ["bullet_lib/cpu"]
cuda = ["bullet_lib/cuda"]

[[bin]]
name = "train"
path = "src/main.rs"
